{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "8a3408f3-a5f7-cbe1-4a05-ce2ccc560385",
  "resources": [
    {
      "module": "module.myModuleec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mymoduleVM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba259e664698cbfc",
            "arn": "arn:aws:ec2:ap-south-1:533267140242:instance/i-01a254146a8f58b4a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a254146a8f58b4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c65a5490d86c6da0",
            "private_dns": "ip-172-31-41-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.68",
            "public_dns": "ec2-52-66-203-239.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.203.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034e1681a6cd09bbc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3fd6072b593956e",
            "tags": {
              "Name": "Projects"
            },
            "tags_all": {
              "Name": "Projects"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0917107004486c430"
            ]
          }
        }
      ]
    },
    {
      "module": "module.project1SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGModules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267140242:security-group/sg-0b7085114cdd5b5d9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0b7085114cdd5b5d9",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "533267140242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-003ab348319e5aaad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project1SG.aws_vpc.moduleVPC"
          ]
        }
      ]
    },
    {
      "module": "module.project1SG",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "moduleVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267140242:vpc/vpc-003ab348319e5aaad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0897b31ebcab7f346",
            "default_route_table_id": "rtb-0e5a68d9119a646ee",
            "default_security_group_id": "sg-08427228b7b832e95",
            "dhcp_options_id": "dopt-023bd0ed2868a94cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003ab348319e5aaad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5a68d9119a646ee",
            "owner_id": "533267140242",
            "tags": {
              "Name": "moduleVPC"
            },
            "tags_all": {
              "Name": "moduleVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.project1SG",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267140242:security-group-rule/sgr-0e6eb7ad9eee9dc11",
            "cidr_ipv4": "10.100.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0e6eb7ad9eee9dc11",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b7085114cdd5b5d9",
            "security_group_rule_id": "sgr-0e6eb7ad9eee9dc11",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project1SG.aws_security_group.SGModules",
            "module.project1SG.aws_vpc.moduleVPC"
          ]
        }
      ]
    },
    {
      "module": "module.project1SG",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267140242:security-group-rule/sgr-0560dda6b149c0229",
            "cidr_ipv4": "10.100.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0560dda6b149c0229",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b7085114cdd5b5d9",
            "security_group_rule_id": "sgr-0560dda6b149c0229",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project1SG.aws_security_group.SGModules",
            "module.project1SG.aws_vpc.moduleVPC"
          ]
        }
      ]
    }
  ]
}